# achordion

./: .gitignore  LICENSE  README.md
client/: CMakeLists.txt  README.md  pom.xml
client/src/: main.cpp
client/src/main/java/: module-info.java
client/src/main/java/com/github/achordion/client/: AchordionApp.java  AudioRecorder.java  HelloApplication.java  HelloController.java  SecondWindowController.java  StartPageController.java  Starter.java
client/src/main/java/com/github/achordion/client/protocol/: AlertClass.java  BackToHome.java  BodyHandler.java  Connection.java  GZipper.java  MainController.java  MainHandler.java  Mtype.java  Note.java  Packet.java  RequestHandler.java  Utilities.java  WindowLoader.java
client/src/main/java/com/github/achordion/client/protocol/core/: CheckedInputStream.java  Connection.java  MType.java  MalformedPacketException.java  Packet.java  SocketClosedException.java
client/src/main/java/com/github/achordion/client/protocol/handling/: AchordListener.java  BodyHandler.java  ChordHandler.java  Note.java  ReceiverThread.java
client/src/main/java/com/github/achordion/client/protocol/handling/events/: AudioEvent.java  ChordEvent.java  DisconnectEvent.java
client/src/main/java/com/github/achordion/client/protocol/handling/listeners/: AchordListener.java  AudioListener.java  ChordListener.java  DisconnectListener.java
client/src/main/java/com/github/achordion/client/protocol/music/: Chord.java  ChordType.java  Note.java
client/src/main/java/com/github/achordion/client/ui/: AudioRecorder.java  OfflineWindowController.java  SecondWindowController.java  StartPageController.java
client/src/main/java/com/github/achordion/client/util/: Tuple.java  Utilities.java
client/src/main/resources/com/github/achordion/client/: SecondWindow.fxml  Start-View.fxml  hello-view.fxml
client/src/main/resources/com/github/achordion/client/CssStyles/: startImage.css  toggleButton.css
client/src/main/resources/com/github/achordion/client/Windows/: OfflineWindow.fxml  SecondWindow.fxml  Start-View.fxml  ThirdWindow.fxml
protocol/: CMakeLists.txt
protocol/src/: message.hpp  tsqueue.hpp
tcpserver/: .dockerignore  CMakeLists.txt  Dockerfile  main.py
tcpserver/achordion/: chord.py  client.py  detect.py  logger.py  note.py  packing.py
tcpserver/legacy-version/: .dockerignore  CMakeLists.txt  Dockerfile  README.md
tcpserver/legacy-version/protocol/: protocol.h
tcpserver/legacy-version/src/: main.cpp  recognition.cpp  recognition.hpp  server.cpp
tcpserver/legacy-version/verification/: main.py
tcpserver/protocol/: net_server.h
tcpserver/src/: main.cpp  note.cpp  note.hpp  notes.cpp  recognition.cpp  recognition.hpp  server.cpp  server.hpp
tcpserver/verification/: main.py  requirements.txt
